Omit data attribute from saved script

--- a/src/widgets/templates/streamlit_single.html.j2
+++ b/src/widgets/templates/streamlit_single.html.j2
@@ -41,7 +41,8 @@
 
 {{ widget_source }}
 
-widget = {{ widget_name }}({{ data }})
+
+widget = {{ widget_name }}()
 widget.run()
 `
                 }
