StreamlitWidget: Add initial_sidebar_state

--- a/src/widgets/templates/streamlit_single.py.j2
+++ b/src/widgets/templates/streamlit_single.py.j2
@@ -1,7 +1,8 @@
 {{ imports }}
 
 st.set_page_config(
-   page_title='{{ title }}'
+   page_title='{{ title }}',
+   initial_sidebar_state='{{ initial_sidebar_state }}'
 )
 
 {{ widget_source }}
