StreamlitWidget: Add layout to page config

--- a/src/widgets/templates/streamlit_single.py.j2
+++ b/src/widgets/templates/streamlit_single.py.j2
@@ -2,6 +2,7 @@
 
 st.set_page_config(
    page_title='{{ title }}',
+   layout='{{ layout }}',
    initial_sidebar_state='{{ initial_sidebar_state }}'
 )
 
