Bugfix - Import order for source_all() (#16)
* Escape \ in HTML

* Place dependencies at the top of source_all()

* StreamlitWidget: Add initial_sidebar_state

* StreamlitWidget: Add layout to page config

* Increment version

--- a/src/widgets/templates/streamlit_single.py.j2
+++ b/src/widgets/templates/streamlit_single.py.j2
@@ -1,7 +1,9 @@
 {{ imports }}
 
 st.set_page_config(
-   page_title='{{ title }}'
+   page_title='{{ title }}',
+   layout='{{ layout }}',
+   initial_sidebar_state='{{ initial_sidebar_state }}'
 )
 
 {{ widget_source }}
