Add st.set_page_config() to HTML render

--- a/src/widgets/templates/streamlit_single.html.j2
+++ b/src/widgets/templates/streamlit_single.html.j2
@@ -38,6 +38,11 @@
                     "app.py": `
 {{ imports }}
 
+st.set_page_config(
+   page_title='{{ title }}',
+   layout='{{ layout }}',
+   initial_sidebar_state='{{ initial_sidebar_state }}'
+)
 
 {{ widget_source }}
 
