--- a/src/widgets/templates/streamlit_single_ga.html.j2
+++ b/src/widgets/templates/streamlit_single_ga.html.j2
@@ -12,6 +12,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@stlite/mountable@{{ stlite_ver }}/build/stlite.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ ga_tag }}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '{{ ga_tag }}');
+    </script>
   </head>
   <body>
     <div id="root"></div>
